@@ -1,1 +1,1 @@
-<!--<iframe width=650 height=400 frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;hq=&amp;hnear=2903+Simkins+Ct,+Palo+Alto,+California+94303&amp;ll=37.44041,-122.117335&amp;spn=0.017412,0.019462&amp;t=m&amp;z=16&amp;output=embed"></iframe>-->
+<iframe width=650 height=400 frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;hq=&amp;hnear=2903+Simkins+Ct,+Palo+Alto,+California+94303&amp;ll=37.44041,-122.117335&amp;spn=0.017412,0.019462&amp;t=m&amp;z=16&amp;output=embed"></iframe>
